Fix: correção no metodo get da classe traducoes